--- a/components/showMarker/showMarker.html
+++ b/components/showMarker/showMarker.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>dwzMap</title>
     <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.css">
+    <style>
+        .anchorBL {
+            display:none
+        };
+    </style>
 </head>
 <body>
     <div class="container">
